--- a/style.css
+++ b/style.css
@@ -1,28 +1,85 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing:border-box
+}
 body {
     text-align: center;
+    background-color: burlywood;
 }
-
-.quadrado {
+button{
+    width: 100%;
+    height: 30px;
+    color: black;
+    font-family: 'Press Start 2P', cursive;
+    background-color: transparent;
+    margin: 50px  auto;
+    border-radius: 10px;
+    border: none;
+    font-size: 20px;
+}
+button:hover{
+    animation: blinker 5s linear infinite;
+}
+@keyframes blinker {  
+    75% { opacity: 0.90; }
+    50% { opacity: 0.60; }
+    25% { opacity: 0.30; }
+  }
+.box{
+    background-color: rgb(129, 97, 54);
+    width: 500px;
+    height: 500px;
+    padding: 10px;
+    border: 4px solid rgb(53, 14, 14);
+    margin: 50px 0px 0px 55% ;
+}
+.info{
+    background-color: rgb(185, 138, 76);
+    border: 4px solid rgb(53, 14, 14);
+    width: 45%;
+    margin: 30px 20px;
+    height: 45%;
+    position: absolute;
+    font-family: 'Press Start 2P', cursive;
+    text-align: left;
+}
+.principal{
     text-align: center;
-    width: 50px;
-    background: #eee;
+    font-size: 30px;
+    margin: 10px auto;
+    font-family: 'Press Start 2P', cursive; 
+    border: 3px solid rgb(53, 14, 14);; 
+    padding: 20px 15px;   
+    border-radius: 10px;
+    background-color: rgb(207, 167, 115);
+    color: rgb(53, 14, 14);
+    max-width: 80%;
+    height: 30%;
+}
+.quadrado{
+    text-align: center;
+    height: calc( 33.333% - 17px);
+    width: calc( 33.333% - 17px);
+    background: blanchedalmond;
     display: inline-block;
-    padding: 40px;
-    font-size: 60px;
     margin: 5px;
+    padding: 20px;
+    font-size: 90px;
     cursor: pointer;
-    color: #eee;
+    color: blanchedalmond;
+    border: 2px solid rgb(53, 14, 14);
+    border-radius: 5px;
 }
 
 .jogador, .vencedor {
     font-size: 30px;
-    margin-top: 10px;
+    margin: 40px 15%;
 }
 
-button {
-    margin-top: 10px;
-    width: 100px;
-    height: 30px;
-    background: #eee;
-    cursor: pointer;
-}
+@media (max-width: 480px) {
+    body {
+      background: #f95e8a;
+    }
+  }
